Fixes for OpenJDK 22